feat: completely remove all mock data, seeded users, and default auto-enrolling classroom logic